fix: CurriculumService 재구성
getKeywordForLevel 삭제
getKeywordForLevel 로직 변경